style (App.css): fix horizontal scroll issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,4 @@
 #root {
-  /* max-width: 1280px; */
-  width: 100vw;
   text-align: center;
 }
 
